2006-01-29    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_keepalive_err): added

2006-01-28    <tino@firebird.03.softkill.net>

	* Makefile.proto: cleaned up revision log
	(distclean): Makefile.md5 no more distcleaned,
	keep it, it does not hurt, but it helps in case you alter
	something.

	* misc_selectcopyloop.h (selectcopyloop): sotsockopt removed.
	This is from an old version (ghost of cut&paste), and mainly
	contra productive.

2006-01-24    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_linger_err, tino_sock_linger)
	(tino_sock_reuse_err, tino_sock_reuse, tino_sock_rcvbuf_err)
	(tino_sock_rcvbuf, tino_sock_sndbuf_err, tino_sock_sndbuf): added

	* hup.h: added simple HUP handler

	* fatal.h (tino_vfatal): moved TINO_ABORT to the right position

	* misc_selectcopyloop.h (selectcopyloop): total number of bytes
	read (bi-directional) added as output parameter.

2006-01-21    <tino@firebird.03.softkill.net>

	* misc_selectcopyloop.h: added into CVS

2005-12-19    <tino@firebird.03.softkill.net>

	* getopt.h (IFxxx macros): unified, to allow compile under old
	(broken) GCCs (like in SuSE 7.2).

2005-12-08    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_error), ex.h: TINO_VEXIT changed

	* exception.h (tino_throw_vstr): added to satisfy 'make test'

	* sock.h: sockaddr_gen renamed to tino_sockaddr
	(tino_sock_recv): added

2005-12-07    <tino@firebird.03.softkill.net>

	* sockbuf.h (tino_sockbuf_process): uses tino_buf_write_away

	* buf.h (tino_buf_write_away): now returns more natural result:
	the write return value.  If buffer is empty EAGAIN is set.

2005-12-05    <tino@firebird.03.softkill.net>

	* helpers.h (tino_readcmp): renamed from readcmp

	* *: started to add COPYLEFT to files

	* sockbuf.h (tino_sockbuf_name, tino_sockbuf_process,
	tino_sockbuf_new): name added

2005-12-04    <tino@firebird.03.softkill.net>

	* str.h (tino_strprefixicmp): added

2005-12-03    <tino@firebird.03.softkill.net>

	* sockbuf.h: now became useable
